NO-JIRA: Remove some namespace polluting "using namespace boost" declarations - Blanket "using namespace" declarations like these are BAD, they can change   the symbols imported into your namespace and you have no control over this. - Needed to make QPID-3893 compile on windows

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1301168 13f79535-47bb-0310-9956-ffa450edef68